[gd_scene load_steps=2 format=3 uid="uid://den13w6x5bc17"]

[ext_resource type="Script" path="res://components/tracker/tracker_component.gd" id="1_mabo4"]

[node name="TrackerComponent" type="Area2D"]
collision_layer = 0
collision_mask = 4
script = ExtResource("1_mabo4")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
